tests/negative/test_sym_type_undef_explicit.orb
data Foo;

explicit Bar Foo;

fnc main () () {
    sym x:Bar;
};